kubernetes/oc/redirect.yml
# Always redirect from HTTP to HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: oc
spec:
  redirectScheme:
    scheme: https
    permanent: true
