kubernetes/oc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc
  namespace: oc
  # Labels are used throughout the Deployment, Service and other elements to connect them all together
  labels:
    app: oc
spec:
  # Default number of replicas
  replicas: 3
  selector:
    matchLabels:
      app: oc
  template:
    metadata:
      labels:
        app: oc
    spec:
      containers:
        - name: oc
          # Desired image to download
          image: speeedyyyy/onlinecompiler2:1.0.29
          # Exposed port
          ports:
            - containerPort: 80
          # Reference for ConfigMap and Secret resources
          volumeMounts:
            - name: keys
              mountPath: /app/keys
          resources:
            requests:
              # Additional CPU will speed up compiling
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 300Mi
      volumes:
        - name: keys
          persistentVolumeClaim:
            claimName: oc-keys
      # This section further restricts Kubernetes from unevenly spreading our Pods
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              name: oc
---
apiVersion: v1
kind: Service
metadata:
  name: oc
  namespace: oc
  annotations:
    # Required for sticky sessions to work
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  selector:
    app: oc
  ports:
    # Bind Pod's exposed port 80 to port 8080 on the Service
    - protocol: TCP
      port: 8080
      targetPort: 80
